[package]
name = "external_sort"
version = "0.1.2"
authors = ["Phillips, Aaron R <aaron.phillips@pnnl.gov>"]
license = "MIT"
repository = "https://github.com/pnnl/external_sort"
keywords = ["sort", "external", "merge", "mergesort"]
categories = ["algorithms"]
readme = "README.md"
description = """
Provides the ability to perform external sorts on structs, which allows for rapid sorting of large data streams.
"""
edition="2018"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
tempdir = "^0.3.5"

[dev-dependencies]
rand = "0.5.1"